// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment displays an image 1`] = `
<div
  className="comment"
>
  <div
    className="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      className="avatar"
      url="/c/foo/m/1"
    />
    <Link
      className="userName userName"
      replace={false}
      to="/c/foo/m/1"
    >
      Joe Smith
    </Link>
    <div
      className="upperRight"
    >
      <span
        className="timestamp timestamp"
      >
        just now
      </span>
    </div>
  </div>
  <a
    className="imageLink"
    href="foo.png"
    target="_blank"
  >
    <img
      className="image"
      src="foo.png"
    />
  </a>
</div>
`;

exports[`Comment displays the delete menu when deleteComment is defined 1`] = `
<div
  className="comment"
>
  <div
    className="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      className="avatar"
      url="/c/foo/m/1"
    />
    <Link
      className="userName userName"
      replace={false}
      to="/c/foo/m/1"
    >
      Joe Smith
    </Link>
    <div
      className="upperRight"
    >
      <span
        className="timestamp timestamp"
      >
        just now
      </span>
      <Dropdown
        className="dropdown"
        items={
          Array [
            Object {
              "icon": "Trash",
              "label": "Delete",
              "onClick": [Function],
            },
          ]
        }
        toggleChildren={
          <Icon
            name="More"
          />
        }
      />
    </div>
  </div>
  <Connect(ClickCatcher)>
    <div
      className="text bdy-lt-sm"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>text of the comment</p>",
        }
      }
      id="text"
    />
  </Connect(ClickCatcher)>
</div>
`;

exports[`Comment displays the remove menu when removeComment is defined 1`] = `
<div
  className="comment"
>
  <div
    className="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      className="avatar"
      url="/c/foo/m/1"
    />
    <Link
      className="userName userName"
      replace={false}
      to="/c/foo/m/1"
    >
      Joe Smith
    </Link>
    <div
      className="upperRight"
    >
      <span
        className="timestamp timestamp"
      >
        just now
      </span>
      <Dropdown
        className="dropdown"
        items={
          Array [
            Object {
              "icon": "Trash",
              "label": "Remove",
              "onClick": [Function],
            },
          ]
        }
        toggleChildren={
          <Icon
            name="More"
          />
        }
      />
    </div>
  </div>
  <Connect(ClickCatcher)>
    <div
      className="text bdy-lt-sm"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>text of the comment</p>",
        }
      }
      id="text"
    />
  </Connect(ClickCatcher)>
</div>
`;

exports[`Comment renders correctly 1`] = `
<div
  className="comment"
>
  <div
    className="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      className="avatar"
      url="/c/foo/m/1"
    />
    <Link
      className="userName userName"
      replace={false}
      to="/c/foo/m/1"
    >
      Joe Smith
    </Link>
    <div
      className="upperRight"
    >
      <span
        className="timestamp timestamp"
      >
        just now
      </span>
    </div>
  </div>
  <Connect(ClickCatcher)>
    <div
      className="text bdy-lt-sm"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>text of the comment</p>",
        }
      }
      id="text"
    />
  </Connect(ClickCatcher)>
</div>
`;

exports[`Comment renders correctly when editing 1`] = `
<div
  className="comment"
>
  <div
    className="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      className="avatar"
      url="/c/foo/m/1"
    />
    <Link
      className="userName userName"
      replace={false}
      to="/c/foo/m/1"
    >
      Joe Smith
    </Link>
    <div
      className="upperRight"
    >
      <span
        className="timestamp timestamp"
      >
        Editing now
      </span>
    </div>
  </div>
  <Connect(ClickCatcher)>
    <Connect(HyloEditor)
      className="editor bdy-lt-sm"
      contentHTML="<p>text of the comment</p>"
      parentComponent="CommentForm"
      submitOnReturnHandler={[Function]}
    />
  </Connect(ClickCatcher)>
</div>
`;
